@@ -2,7 +2,6 @@ package mabubu0203.com.github.catcafe.api.controller.cast.helper.response;
 
 import java.time.ZoneOffset;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import mabubu0203.com.github.catcafe.api.controller.cast.service.model.output.CastSearchServiceOutput;
 import mabubu0203.com.github.catcafe.common.controller.mapper.response.SearchResponseMapper;
 import org.openapitools.model.CastCat;
@@ -17,7 +16,7 @@ public class CastSearchResponseMapper implements
   public CastSearchResponse apply(CastSearchServiceOutput castSearchServiceOutput) {
     var casts = castSearchServiceOutput.getCasts().stream()
         .map(this::convert)
-        .collect(Collectors.toList());
+        .toList();
 
     var result = new CastSearchResponse();
     result.setCasts(casts);
@@ -26,37 +25,31 @@ public class CastSearchResponseMapper implements
 
   private CastDetail convert(CastSearchServiceOutput.CastObject cast) {
     var detail = new CastDetail();
+    var common = this.common(cast.getCommon());
     detail.setId(cast.getId());
     detail.setStoreId(cast.getStoreId());
     detail.setCastCat(this.convert(cast.getCastCat()));
-
-    var common = new Common();
-    var commonObject = cast.getCommon();
-    common.setCreatedDateTime(null);
-    common.setVersion(commonObject.getVersion());
-    common.setUpdatedDateTime(
-        Optional.ofNullable(commonObject.getUpdatedDateTime())
-            .map(ldt -> ldt.atOffset(ZoneOffset.ofHours(9)))
-            .orElse(null));
     detail.setCommon(common);
     return detail;
   }
 
   private CastCat convert(CastSearchServiceOutput.CastCatObject castCat) {
     var detail = new CastCat();
+    var common = this.common(castCat.getCommon());
     detail.setId(castCat.getId());
     detail.setName(castCat.getName());
-
-    var common = new Common();
-    var commonObject = castCat.getCommon();
-    common.setCreatedDateTime(null);
-    common.setVersion(commonObject.getVersion());
-    common.setUpdatedDateTime(
-        Optional.ofNullable(commonObject.getUpdatedDateTime())
-            .map(ldt -> ldt.atOffset(ZoneOffset.ofHours(9)))
-            .orElse(null));
     detail.setCommon(common);
     return detail;
+  }
+
+  private Common common(CastSearchServiceOutput.CommonObject object) {
+    var common = new Common();
+    common.setCreatedDateTime(object.getCreatedDateTime().atOffset(ZoneOffset.ofHours(9)));
+    common.setVersion(object.getVersion());
+    Optional.ofNullable(object.getUpdatedDateTime())
+        .map(ldt -> ldt.atOffset(ZoneOffset.ofHours(9)))
+        .ifPresent(common::setUpdatedDateTime);
+    return common;
   }
 
 }
